apps/staging/nginx/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.staging.fanen.dk`)
      kind: Rule
      services:
        - name: nginx
          port: 80
